# proyectuav

./: README.md
src/: .rosinstall
src/aerial_project/launch/: aerial_project.launch  mapping.launch
src/fiducials/aruco_detect/: CMakeLists.txt
src/fiducials/aruco_detect/launch/: aruco_detect.launch  aruco_detect_frontal.launch  aruco_detect_ventral.launch
src/fiducials/aruco_detect/src/: aruco_detect.cpp
src/final_aerial_project/: CMakeLists.txt  package.xml
src/final_aerial_project/include/aerial_project/: path_planner.h
src/final_aerial_project/launch/: aerial_project_final.launch  mapping.launch  planner.launch
src/final_aerial_project/src/: delivery_station.cpp  path_planner.cpp
src/final_aerial_project/worlds/: industrial_env_final_markers_v3.world
src/final_aerial_project_/launch/: aerial_project_final.launch  configuration.rviz
src/frontal_aruco/: CMakeLists.txt  package.xml
src/frontal_aruco/cfg/: DetectorParams.cfg
src/frontal_aruco/launch/: frontal_aruco.launch
src/frontal_aruco/src/: frontal_aruco.cpp
src/kalman_filter/: CMakeLists.txt  package.xml
src/kalman_filter/launch/: kf_example.launch
src/kalman_filter/src/: estimator.cpp  estimator.h
src/mav_voxblox_planning/install/install_https/: .rosinstall
src/mav_voxblox_planning/voxblox_rrt_planner/: CMakeLists.txt
src/mav_voxblox_planning/voxblox_rrt_planner/launch/: firefly_rrt.launch  rrt_saved_map.launch
src/mission_planner/: CMakeLists.txt  package.xml
src/mission_planner/include/: mission_planner.h
src/mission_planner/launch/: mission_planner.launch
src/mission_planner/msg/: transform_type.msg
src/mission_planner/src/: mission_planner.cpp  mission_planner.h  mission_planner_main.cpp
src/rotors_exercise/: controller.yaml
src/rotors_exercise/cfg/cpp/rotors_exercise/: ControllerConfig.h
src/rotors_exercise/launch/: exercise.launch
src/rotors_exercise/rviz/: rotors_exercise.rviz
src/rotors_exercise/src/: control.cpp  waypoint_publisher_file_fixed.cpp
src/transform_manager/: CMakeLists.txt  package.xml
src/transform_manager/src/: transform_manager.cpp  transform_manager.h  transform_manager_main.cpp
src/transform_pose/: CMakeLists.txt  package.xml
src/transform_pose/include/: transform_pose.h
src/transform_pose/src/: transform_pose.cpp  transform_pose_main.cpp
